Fix wolfssl build, still doesn't want to load a fuggin ed25519 cert

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,16 @@ endif()
 add_library(libqualia_static STATIC EXCLUDE_FROM_ALL ${sourcefiles})
 add_library(libqualia SHARED ${sourcefiles})
 
+if (NOT DISABLE_TLS)
+	if (USE_WOLFSSL)
+		target_compile_definitions(libqualia PUBLIC QUALIA_USE_WOLFSSL)
+		target_compile_definitions(libqualia_static PUBLIC QUALIA_USE_WOLFSSL)
+	else()
+		target_compile_definitions(libqualia PUBLIC QUALIA_USE_OPENSSL)
+		target_compile_definitions(libqualia_static PUBLIC QUALIA_USE_OPENSSL)
+	endif()
+endif()
+
 if (NOT DISABLE_PYTHON)
 	message("== Searching for Python 3 devel...")
 	pkg_check_modules(PYTHON3 REQUIRED python3-embed python3)
