Add CMake option to disable SSL initialization in case a parent project already did, only initialize it once otherwise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,12 +59,18 @@ add_library(libqualia_static STATIC EXCLUDE_FROM_ALL ${sourcefiles})
 add_library(libqualia SHARED ${sourcefiles})
 
 if (NOT DISABLE_TLS)
+	if (SSL_ALREADY_INIT)
+		target_compile_definitions(libqualia PUBLIC QUALIA_SSL_ALREADY_INIT=1)
+		target_compile_definitions(libqualia_static PUBLIC QUALIA_SSL_ALREADY_INIT=1)
+		message("== !! Assuming SSL library already initialized by a parent project !! ==")
+	endif()
+	
 	if (USE_WOLFSSL)
-		target_compile_definitions(libqualia PUBLIC QUALIA_USE_WOLFSSL)
-		target_compile_definitions(libqualia_static PUBLIC QUALIA_USE_WOLFSSL)
+		target_compile_definitions(libqualia PUBLIC QUALIA_USE_WOLFSSL=1)
+		target_compile_definitions(libqualia_static PUBLIC QUALIA_USE_WOLFSSL=1)
 	else()
-		target_compile_definitions(libqualia PUBLIC QUALIA_USE_OPENSSL)
-		target_compile_definitions(libqualia_static PUBLIC QUALIA_USE_OPENSSL)
+		target_compile_definitions(libqualia PUBLIC QUALIA_USE_OPENSSL=1)
+		target_compile_definitions(libqualia_static PUBLIC QUALIA_USE_OPENSSL=1)
 	endif()
 endif()
 
